fdo#61513: Remove FSysFailOnErrorImpl macro

This patch removes all used of this useless macro.

Change-Id: Ib3842ef28ea676e75b18c192f8d9610dcb3c3d0c